@@ -11,21 +11,43 @@
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
-
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <testng.version>7.4.0</testng.version>
+
     <selenium.version>4.0.0</selenium.version>
     <webdriver.version>5.0.3</webdriver.version>
+
     <checkstyle.version>8.42</checkstyle.version>
     <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
-  </properties>
 
+    <assertj.version>3.21.0</assertj.version>
+
+    <aspectj.version>1.9.5</aspectj.version>
+    <allure.version>2.14.0</allure.version>
+  </properties>
   <profiles>
+    <profile>
+      <id>homework4-differnt-page-test-suite</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <suite.xml.name>${project.basedir}/src/test/resources/home.epam.hw4/DifferentElementsPageTestSuite.xml</suite.xml.name>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>homework4-home-page-test-suite</id>
+      <properties>
+        <suite.xml.name>${project.basedir}/src/test/resources/home.epam.hw4/HomePageTestSuite.xml</suite.xml.name>
+      </properties>
+    </profile>
+
     <profile>
       <id>homework3-differnt-page-test-suite</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
+        <!--<activeByDefault>true</activeByDefault>-->
       </activation>
       <properties>
         <suite.xml.name>${project.basedir}/src/test/resources/home.epam.hw3/DifferentElementsPageTestSuite.xml</suite.xml.name>
@@ -38,24 +60,11 @@
         <suite.xml.name>${project.basedir}/src/test/resources/home.epam.hw3/HomePageTestSuite.xml</suite.xml.name>
       </properties>
     </profile>
-  </profiles>
-  <properties>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <testng.version>7.4.0</testng.version>
-    <selenium.version>4.0.0</selenium.version>
-    <webdriver.version>5.0.3</webdriver.version>
-    <checkstyle.version>8.42</checkstyle.version>
-    <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
-    <assertj.version>3.21.0</assertj.version>
-  </properties>
-  <profiles>
     <profile>
       <id>homework2-differnt-page-test-suite</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
+       <!-- <activeByDefault>true</activeByDefault>-->
       </activation>
       <properties>
         <suite.xml.name>${project.basedir}/src/test/resources/home.epam.hw2/DifferentElementsPageTestSuite.xml</suite.xml.name>
@@ -79,7 +88,7 @@
     <profile>
       <id>homework01-sum-sub-test-suite</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
+        <!--<activeByDefault>true</activeByDefault>-->
       </activation>
       <properties>
         <suite.xml.name>${project.basedir}/src/test/resources/home.epam.tc.hw1/SumSubCalculatorTestSuite.xml</suite.xml.name>
@@ -95,13 +104,6 @@
   </profiles>
 
   <dependencies>
-    <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
-      <version>${testng.version}</version>
-      <scope>test</scope>
-    </dependency>
-
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
@@ -136,6 +138,12 @@
       <systemPath>${project.basedir}/src/main/resources/calculator-1.0.jar</systemPath>
     </dependency>
 
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-testng</artifactId>
+      <version>${allure.version}</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -153,7 +161,6 @@
         </dependencies>
         <configuration>
           <configLocation>
-            <!--  pay attention to use exact url for checkstyle plugin ruleset  -->
             https://raw.githubusercontent.com/DmitryKhodakovsky/epam-training-center-code-checkers-configurations/main/checkstyle/checkstyle.xml
           </configLocation>
           <encoding>${project.build.sourceEncoding}</encoding>
@@ -178,77 +185,38 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M5</version>
         <configuration>
-          <suiteXmlFiles>${suite.xml.name}</suiteXmlFiles>
+          <argLine>
+            --illegal-access=permit
+            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+          </argLine>
+          <suiteXmlFiles>
+            <suiteXmlFiles>${suite.xml.name}</suiteXmlFiles>
+          </suiteXmlFiles>
         </configuration>
-      </plugin>
-    </plugins>
-  </build>
-
-
-  <dependencies>
-    <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
-      <version>${testng.version}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.seleniumhq.selenium</groupId>
-      <artifactId>selenium-java</artifactId>
-      <version>${selenium.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>io.github.bonigarcia</groupId>
-      <artifactId>webdrivermanager</artifactId>
-      <version>${webdriver.version}</version>
-    </dependency>
-
-  </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>${maven-checkstyle-plugin.version}</version>
         <dependencies>
           <dependency>
-            <groupId>com.puppycrawl.tools</groupId>
-            <artifactId>checkstyle</artifactId>
-            <version>${checkstyle.version}</version>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectj.version}</version>
           </dependency>
         </dependencies>
-        <configuration>
-          <configLocation>
-            <!--  pay attention to use exact url for checkstyle plugin ruleset  -->
-            https://raw.githubusercontent.com/DmitryKhodakovsky/epam-training-center-code-checkers-configurations/main/checkstyle/checkstyle.xml
-          </configLocation>
-          <encoding>${project.build.sourceEncoding}</encoding>
-          <includeTestSourceDirectory>true</includeTestSourceDirectory>
-          <consoleOutput>true</consoleOutput>
-          <failsOnError>true</failsOnError>
-          <linkXRef>false</linkXRef>
-        </configuration>
-        <executions>
-          <execution>
-            <id>validate</id>
-            <phase>validate</phase>
-            <goals>
-              <goal>check</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M5</version>
-        <configuration>
-          <suiteXmlFiles>${suite.xml.name}</suiteXmlFiles>
-        </configuration>
       </plugin>
     </plugins>
   </build>
+
+  <reporting>
+    <excludeDefaults>true</excludeDefaults>
+    <plugins>
+      <plugin>
+        <groupId>io.qameta.allure</groupId>
+        <artifactId>allure-maven</artifactId>
+        <version>2.10.0</version>
+        <configuration>
+          <reportVersion>${allure.version}</reportVersion>
+        </configuration>
+      </plugin>
+    </plugins>
+  </reporting>
+
+
 </project>
